<resources>
    <string name="app_name">ISE</string>
    <string name="btn_login_with_google">Login with google</string>
    <string name="button_sign_in">Sign in</string>

    <string name="toolbar_enrolled">Enrolled courses</string>
    <string name="action_latest">Latest</string>
    <string name="action_on_going">On Going</string>
    <string name="action_finished">Finished</string>
    <string name="action_voice">voice</string>
    <string name="hint_search">Input course name to search…</string>

    <string name="text_divider">OR</string>
    <string name="text_empty_courses">You haven\'t enrolled any courses!</string>
    <string name="text_date_of_birth">Date of birth</string>
    <string name="text_major">Major</string>
    <string name="text_gender">Gender</string>
    <string name="text_email">Email</string>
    <string name="text_phone">Phone</string>
    <string name="text_password">Password</string>

    <string name="sample_name">Bùi Văn Phú</string>
    <string name="sample_title">Opportunity to protect graduation projects in Australia for FPT University students</string>
    <string name="sample_major">Software Engineering</string>
    <string name="action_home">Home</string>
    <string name="action_search">Search</string>
    <string name="action_my_courses">My Courses</string>
    <string name="action_profile">Profile</string>
    <string name="button_enroll">Enroll</string>

    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="unknown">Unknown</string>
    <string name="button_logout">Logout</string>
    <string name="toast_server_error">Something is wrong, please try again!</string>
    <string name="toast_login_failed">Wrong email or password!</string>
    <string name="toast_empty_email">Please enter email!</string>
    <string name="toast_empty_password">Please enter password!</string>
    <string name="confirm_message">Are you sure to logout?</string>
    <string name="confirm_positive_button">Confirm</string>
    <string name="confirm_negative_button">Cancel</string>
    <string name="detail_description">Description</string>
    <string name="detail_features">Features</string>
    <string name="detail_requirement">Requirement</string>
    <string name="label_date">Date</string>
    <string name="label_semester">Semester</string>
    <string name="label_country">Country</string>
    <string name="label_number_of_participants">Number of participants</string>
    <string name="label_status">Status</string>
    <string name="status_on_going">On-going</string>
    <string name="status_finished">FINISHED</string>
    <string name="label_course_price">Course price</string>
    <string name="accout_type_manager">Manager</string>
</resources>
