<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_confirmation_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textDialogMessage"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:fontFamily="@font/montserrat"
        android:text="@string/confirm_message"
        android:textSize="@dimen/sp_25"
        app:layout_constraintBottom_toTopOf="@id/buttonConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/bg_positive_button"
        android:text="@string/confirm_positive_button"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDialogMessage"/>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/bg_negative_button"
        android:text="@string/confirm_negative_button"
        app:layout_constraintBaseline_toBaselineOf="@id/buttonConfirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonConfirm"
        app:layout_constraintTop_toBottomOf="@id/textDialogMessage"/>

</androidx.constraintlayout.widget.ConstraintLayout>
