<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuildLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".4"/>

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:layout_margin="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fpt_logo"
        tools:ignore="ContentDescription"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuildLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        app:layout_constraintBottom_toTopOf="@id/buttonSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuildLine"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            tools:ignore="Autofill"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:background="@drawable/bg_signin_button"
        android:text="@string/button_sign_in"
        app:layout_constraintBottom_toTopOf="@id/dividerText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutInputPassword"/>

    <View
        android:id="@+id/dividerLeft"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:background="@color/color_gray"
        app:layout_constraintBottom_toTopOf="@id/buttonGoogleSignIn"
        app:layout_constraintEnd_toStartOf="@id/dividerText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSignIn"/>

    <TextView
        android:id="@+id/dividerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_8"
        android:text="@string/text_divider"
        android:textColor="@color/color_gray"
        app:layout_constraintBottom_toTopOf="@id/buttonGoogleSignIn"
        app:layout_constraintEnd_toStartOf="@id/dividerRight"
        app:layout_constraintStart_toEndOf="@id/dividerLeft"
        app:layout_constraintTop_toBottomOf="@id/buttonSignIn"/>

    <View
        android:id="@+id/dividerRight"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_18"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_toEndOf="@id/dividerText"
        android:background="@color/color_gray"
        app:layout_constraintBottom_toTopOf="@id/buttonGoogleSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dividerText"
        app:layout_constraintTop_toBottomOf="@id/buttonSignIn"/>

    <Button
        android:id="@+id/buttonGoogleSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:background="@drawable/bg_google_button"
        android:drawableStart="@drawable/ic_google"
        android:padding="@dimen/dp_10"
        android:text="@string/btn_login_with_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerText"/>
</androidx.constraintlayout.widget.ConstraintLayout>
