<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/CollapsedAppBarTitle"
            app:contentScrim="@color/colorPrimaryDark"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/imageThumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/sample_thumbnail"
                app:layout_collapseMode="parallax"
                tools:ignore="ContentDescription"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:padding="@dimen/dp_8"
                android:text="@string/sample_title"
                android:textAlignment="center"
                android:textSize="@dimen/sp_25"
                app:layout_constraintBottom_toTopOf="@id/textLeader"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread"/>

            <TextView
                android:id="@+id/textLeader"
                style="@style/DetailDrawableText"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_account_type"
                android:text="@string/sample_name"
                app:layout_constraintBaseline_toBaselineOf="@id/textPartner"
                app:layout_constraintBottom_toTopOf="@id/detailViewPager"
                app:layout_constraintEnd_toStartOf="@id/textPartner"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textTitle"/>

            <TextView
                android:id="@+id/textPartner"
                style="@style/DetailDrawableText"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_roll_number"
                app:layout_constraintBottom_toTopOf="@id/detailViewPager"
                app:layout_constraintEnd_toStartOf="@id/textMajor"
                app:layout_constraintStart_toEndOf="@id/textLeader"
                app:layout_constraintTop_toBottomOf="@id/textTitle"/>

            <TextView
                android:id="@+id/textMajor"
                style="@style/DetailDrawableText"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_roll_number"
                app:layout_constraintBaseline_toBaselineOf="@id/textPartner"
                app:layout_constraintBottom_toTopOf="@id/detailViewPager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textPartner"
                app:layout_constraintTop_toBottomOf="@id/textTitle"/>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/detailViewPager"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintBottom_toTopOf="@id/buttonEnroll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textPartner">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabMode="fixed"/>

            </androidx.viewpager.widget.ViewPager>

            <Button
                android:id="@+id/buttonEnroll"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_20"
                android:text="@string/button_enroll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailViewPager"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
